// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote should render default Blockquote 1`] = `
<blockquote
  className="coop-t-blockquote"
>
  <p
    className="coop-t-blockquote__quote"
  >
    this is a quote and is required
  </p>
  <cite
    className="coop-t-blockquote__cite"
  >
    citation one
  </cite>
</blockquote>
`;

exports[`Blockquote should work with all variants 1`] = `
<div>
  <blockquote
    className="coop-t-blockquote"
  >
    <p
      className="coop-t-blockquote__quote coop-t-blockquote__quote--large"
    >
      this is a quote and is required
    </p>
    <cite
      className="coop-t-blockquote__cite"
    >
      cite
    </cite>
  </blockquote>
</div>
`;
